--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 ndarray = { version = "0.17", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.12"
+ratatui = "0.30.0"
+crossterm = "0.29.0"
